day4/k8s-production-deploy/k8s/network-policies/allow-external-to-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-frontend
  namespace: k8s-dashboard
spec:
  podSelector:
    matchLabels:
      app: k8s-dashboard-frontend
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
