day4/k8s-production-deploy/k8s/network-policies/allow-frontend-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: k8s-dashboard
spec:
  podSelector:
    matchLabels:
      app: k8s-dashboard-backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: k8s-dashboard-frontend
    ports:
    - protocol: TCP
      port: 5000
