day4/k8s-production-deploy/k8s/network-policies/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: k8s-dashboard
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
